--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -13,7 +13,7 @@
   {%
     set links = [
       {
-        'title': 'create account',
+        'title': 'Create account',
         'href': 'create-account.html'
       }
     ]
