--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -53,21 +53,22 @@ $media-expressions: (
   --color-black: #000;
   --color-grey: #999;
   --color-blue: #39f;
+  --color-blue-80: #02143b;
 
   // Fonts
   --font-sans-serif: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   --font-serif: 'Times New Roman', Times, Baskerville, Georgia, serif;
 
   // Body base
-  --base-background-color: var(--color-black);
+  --base-background-color: var(--color-blue-80);
   --base-font-family: var(--font-sans-serif);
   --base-font-size: 1.6rem;
   --base-line-height: 1.2;
-  --base-text-color: var(--color-black);
+  --base-text-color: var(--color-white);
   --base-min-width: 320px;
 
   // Links base
-  --base-link-color: var(--color-blue);
+  --base-link-color: var(--color-white);
 
   // Buttons base
   --btn-color: var(--color-white);
