--- a/assets/html/create-account.njk
+++ b/assets/html/create-account.njk
@@ -8,6 +8,7 @@
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>₿</text></svg>"
 />
+    {% include './partials/head/fonts.njk' %}
     {% include './partials/head/common.njk' %}
   </head>
   {% from "./partials/components/icon.njk" import icon %}
@@ -52,19 +53,32 @@
         <img src="./img/bg_registration.jpg" alt="">
       </div>
       <div class="page__container">
-        <div class="reg-form__wrapper">
+        <div class="page__wrapper">
           <a href="javascript: void(0)" class="logo logo-lg">
             <img src="./img/logo.png" alt="logo">
           </a>
-          <h4>Create your free account</h4>
+          <h1 class="reg-form__title">Create your free account</h1>
           <form id="{{ form.id }}" class="reg-form">
             {% for input in inputs %}
-              <label for="{{ input.name }}" class="reg-form__label">
+              <label for="{{ input.name }}" class="reg-form__input-wrapper">
                 {{ icon(input.icon) }}
                 <input id="{{ input.name }}" type="{{ input.type }}" class="reg-form__input" placeholder="{{ input.placeholder }}">
               </label>
             {% endfor %}
+            <div class="reg-form__term">
+              <label for="create-acc-privacy" class="reg-form__checkbox-wrapper">
+                <input id="create-acc-privacy" type="checkbox" class="reg-form__checkbox">
+                {{ icon('check') }}
+              </label>
+              <div>I agree to the Terms of Service and have read and acknowledge the <a href="javascript: void(0)">
+                  <b>Privacy Statement</b>
+                </a>.</div>
+            </div>
+            <button type="submit" class="btn btn-grad-blue">Create Account</button>
           </form>
+          <div class="sing-in">
+          Already have an account? <a href="javascript: void(0)">Sign in</a>
+          </div>
         </div>
       </div>
     </main>
