--- a/assets/scss/components/reg-form.scss
+++ b/assets/scss/components/reg-form.scss
@@ -3,14 +3,15 @@
   flex-direction: column;
   align-items: stretch;
   max-width: 360px;
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  &__title {
+    margin: 30px 0 90px;
+    font-weight: 800;
+    font-size: 30px;
   }
-  &__label {
+  &__input-wrapper {
     --icon-color: var(--color-blue-40);
     position: relative;
+    display: flex;
     &:not(:last-child) {
       margin-bottom: 15px;
     }
@@ -21,9 +22,42 @@
       transform: translateY(-50%);
     }
   }
+  &__checkbox-wrapper {
+    --icon-color: var(--color-blue-40);
+    position: relative;
+    flex-shrink: 0;
+    width: 19px;
+    height: 19px;
+    margin-right: 15px;
+    border-radius: 3px;
+    background-color: var(--color-white);
+    .icon {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      @include animate(opacity);
+    }
+  }
   &__input {
+    width: 100%;
     padding: 15px 35px 15px 55px;
     border: none;
     border-radius: 50px;
+  }
+  &__checkbox {
+    position: absolute;
+    visibility: hidden;
+    &:checked {
+      & ~ .icon {
+        opacity: 1;
+      }
+    }
+  }
+  &__term {
+    display: flex;
+    font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+    line-height: 1.4;
   }
 }
