--- a/assets/scss/pages/create-account.scss
+++ b/assets/scss/pages/create-account.scss
@@ -1,12 +1,33 @@
 .page--create-account {
   padding: 72px 0;
-  .page__bg {
-    position: fixed;
-    height: 100vh;
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+  .page {
+    &__bg {
+      position: fixed;
+      height: 100vh;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    &__wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  .sing-in {
+    margin-top: 35px;
+    font-weight: 700;
+    font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+    a {
+      color: var(--color-blue-10);
+    }
+  }
+  .reg-form {
+    .btn {
+      margin: 25px 0 35px;
     }
   }
 }
