update page create account

--- a/assets/html/create-account.njk
+++ b/assets/html/create-account.njk
@@ -76,6 +76,10 @@
             </div>
             <button type="submit" class="btn btn-grad-blue">Create Account</button>
           </form>
+          <div class="reg-form__recaptcha">
+            {# This img for example #}
+            <img src="./img/recaptcha.png" alt="">
+          </div>
           <div class="sing-in">
           Already have an account? <a href="javascript: void(0)">Sign in</a>
           </div>
