--- a/assets/scss/components/reg-form.scss
+++ b/assets/scss/components/reg-form.scss
@@ -7,6 +7,11 @@
     margin: 30px 0 90px;
     font-weight: 800;
     font-size: 30px;
+    text-align: center;
+    @include media('<=xs') {
+      margin: 30px 0 30px;
+      font-size: 24px;
+    }
   }
   &__input-wrapper {
     --icon-color: var(--color-blue-40);
@@ -31,6 +36,7 @@
     margin-right: 15px;
     border-radius: 3px;
     background-color: var(--color-white);
+    cursor: pointer;
     .icon {
       position: absolute;
       width: 100%;
@@ -59,5 +65,9 @@
     font-size: 12px;
     font-family: 'Raleway', sans-serif;
     line-height: 1.4;
+  }
+  &__recaptcha {
+    max-width: 285px;
+    max-height: 75px;
   }
 }
