add page verify account

--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -15,11 +15,15 @@
       {
         'title': 'Create account',
         'href': 'create-account.html'
+      },
+      {
+        'title': 'Verify email',
+        'href': 'verify-email.html'
       }
     ]
   %}
   <body>
-    <main>
+    <main style="padding: 20px 30px;">
       <h1>Pages list:</h1>
       <ul>
         {% for link in links %}
