--- a/assets/html/index.njk
+++ b/assets/html/index.njk
@@ -13,12 +13,16 @@
   {%
     set links = [
       {
-        'title': 'Create account',
-        'href': 'create-account.html'
+        'title': 'Registration - Create account',
+        'href': 'registration-create-account.html'
       },
       {
-        'title': 'Verify email',
-        'href': 'verify-email.html'
+        'title': 'Registration - Verify email',
+        'href': 'registration-verify-email.html'
+      },
+      {
+        'title': 'Landing',
+        'href': 'landing.html'
       }
     ]
   %}
@@ -27,12 +31,11 @@
       <h1>Pages list:</h1>
       <ul>
         {% for link in links %}
-          <li>
+          <li style="margin-bottom: 10px;">
             <a href="{{ link.href }}">{{ link.title }}</a>
           </li>
         {% endfor %}
       </ul>
     </main>
-    {% include './partials/scripts/common.njk' %}
   </body>
 </html>
