--- a/assets/html/registration-create-account.njk
+++ b/assets/html/registration-create-account.njk
@@ -48,7 +48,7 @@
     ]
   %}
   <body>
-    <main class="page page--create-account">
+    <main class="page page--registration">
       <div class="page__bg">
         <img src="./img/bg_registration.jpg" alt="">
       </div>
@@ -57,7 +57,7 @@
           <a href="javascript: void(0)" class="logo logo-lg">
             <img src="./img/logo.png" alt="logo">
           </a>
-          <h1 class="reg-form__title">Create your free account</h1>
+          <h1 class="page__title">Create your free account</h1>
           <form id="{{ form.id }}" class="reg-form">
             {% for input in inputs %}
               <label for="{{ input.name }}" class="reg-form__input-wrapper">
