--- a/assets/scss/pages/registration.scss
+++ b/assets/scss/pages/registration.scss
@@ -1,4 +1,4 @@
-.page--create-account {
+.page--registration {
   padding: 72px 0;
   .page {
     &__bg {
@@ -15,6 +15,16 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+    &__title {
+      margin: 30px 0 90px;
+      font-weight: 800;
+      font-size: 30px;
+      text-align: center;
+      @include media('<=xs') {
+        margin: 30px 0 30px;
+        font-size: 24px;
+      }
     }
   }
   .sing-in {
