--- a/assets/html/registration-create-account.njk
+++ b/assets/html/registration-create-account.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="cs">
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -48,39 +48,39 @@
     ]
   %}
   <body>
-    <main class="page page--registration">
-      <div class="page__bg">
+    <main class="cs--page cs--page--registration">
+      <div class="cs--page__bg">
         <img src="./img/bg_registration.jpg" alt="">
       </div>
-      <div class="page__container">
-        <div class="page__wrapper">
-          <a href="javascript: void(0)" class="logo logo-lg">
+      <div class="cs--page__container">
+        <div class="cs--page__wrapper">
+          <a href="javascript: void(0)" class="cs--logo cs--logo-lg">
             <img src="./img/logo.png" alt="logo">
           </a>
-          <h1 class="page__title">Create your free account</h1>
-          <form id="{{ form.id }}" class="reg-form">
+          <h1 class="cs--page__title">Create your free account</h1>
+          <form id="{{ form.id }}" class="cs--reg-form">
             {% for input in inputs %}
-              <label for="{{ input.name }}" class="reg-form__input-wrapper">
+              <label for="{{ input.name }}" class="cs--reg-form__input-wrapper">
                 {{ icon(input.icon) }}
-                <input id="{{ input.name }}" type="{{ input.type }}" class="reg-form__input" placeholder="{{ input.placeholder }}">
+                <input id="{{ input.name }}" type="{{ input.type }}" class="cs--reg-form__input" placeholder="{{ input.placeholder }}">
               </label>
             {% endfor %}
-            <div class="reg-form__term">
-              <label for="create-acc-privacy" class="reg-form__checkbox-wrapper">
-                <input id="create-acc-privacy" type="checkbox" class="reg-form__checkbox">
+            <div class="cs--reg-form__term">
+              <label for="create-acc-privacy" class="cs--reg-form__checkbox-wrapper">
+                <input id="create-acc-privacy" type="checkbox" class="cs--reg-form__checkbox">
                 {{ icon('check') }}
               </label>
               <div>I agree to the Terms of Service and have read and acknowledge the <a href="javascript: void(0)">
                   <b>Privacy Statement</b>
                 </a>.</div>
             </div>
-            <button type="submit" class="btn btn-grad-blue">Create Account</button>
+            <button type="submit" class="cs--btn cs--btn-grad-blue">Create Account</button>
           </form>
-          <div class="reg-form__recaptcha">
+          <div class="cs--reg-form__recaptcha">
             {# This img for example #}
             <img src="./img/recaptcha.png" alt="">
           </div>
-          <div class="sing-in">
+          <div class="cs--sing-in">
           Already have an account? <a href="javascript: void(0)">Sign in</a>
           </div>
         </div>
