--- a/assets/html/registration-verify-email.njk
+++ b/assets/html/registration-verify-email.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="cs">
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -30,24 +30,24 @@
     ]
   %}
   <body>
-    <main class="page page--registration">
-      <div class="page__bg">
+    <main class="cs--page cs--page--registration">
+      <div class="cs--page__bg">
         <img src="./img/bg_registration.jpg" alt="">
       </div>
-      <div class="page__container">
-        <div class="page__wrapper">
-          <a href="javascript: void(0)" class="logo logo-lg">
+      <div class="cs--page__container">
+        <div class="cs--page__wrapper">
+          <a href="javascript: void(0)" class="cs--logo cs--logo-lg">
             <img src="./img/logo.png" alt="logo">
           </a>
-          <h1 class="page__title">Enter the code from E-mail</h1>
-          <form id="{{ form.id }}" class="reg-form">
+          <h1 class="cs--page__title">Enter the code from E-mail</h1>
+          <form id="{{ form.id }}" class="cs--reg-form">
             {% for input in inputs %}
-              <label for="{{ input.name }}" class="reg-form__input-wrapper">
+              <label for="{{ input.name }}" class="cs--reg-form__input-wrapper">
                 {{ icon(input.icon) }}
-                <input id="{{ input.name }}" type="{{ input.type }}" class="reg-form__input" placeholder="{{ input.placeholder }}">
+                <input id="{{ input.name }}" type="{{ input.type }}" class="cs--reg-form__input" placeholder="{{ input.placeholder }}">
               </label>
             {% endfor %}
-            <button type="submit" class="btn btn-grad-blue">Confirm registration</button>
+            <button type="submit" class="cs--btn cs--btn-grad-blue">Confirm registration</button>
           </form>
         </div>
       </div>
