--- a/assets/scss/base/reset.scss
+++ b/assets/scss/base/reset.scss
@@ -8,26 +8,25 @@
   box-sizing: border-box;
 }
 
-html {
+html.cs {
   font-size: 62.5%;
-}
+  body {
+    @include font-smoothing(on);
+    min-width: var(--base-min-width);
+    background: var(--base-background-color);
+    color: var(--base-text-color);
+    font: var(--base-font-size) / var(--base-line-height) var(--base-font-family);
+  }
 
-body {
-  @include font-smoothing(on);
-  min-width: var(--base-min-width);
-  background: var(--base-background-color);
-  color: var(--base-text-color);
-  font: var(--base-font-size) / var(--base-line-height) var(--base-font-family);
-}
+  // adaptive images
+  img {
+    max-width: 100%;
+    height: auto;
+    pointer-events: none;
+  }
 
-// adaptive images
-img {
-  max-width: 100%;
-  height: auto;
-  pointer-events: none;
-}
-
-// google map fix
-.gm-style img {
-  max-width: none;
+  // google map fix
+  .gm-style img {
+    max-width: none;
+  }
 }
