--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -1,4 +1,7 @@
 // This is the main with imports from components folder.
 
+@import 'logo';
 @import 'reg-form';
 @import 'btn';
+@import 'landing/header';
+@import 'landing/nav';
