--- a/assets/scss/components/reg-form.scss
+++ b/assets/scss/components/reg-form.scss
@@ -1,4 +1,4 @@
-.reg-form {
+.cs--reg-form {
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -10,7 +10,7 @@
     &:not(:last-child) {
       margin-bottom: 15px;
     }
-    .icon {
+    .cs--icon {
       position: absolute;
       top: 50%;
       left: 20px;
@@ -27,7 +27,7 @@
     border-radius: 3px;
     background-color: var(--color-white);
     cursor: pointer;
-    .icon {
+    .cs--icon {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -45,7 +45,7 @@
     position: absolute;
     visibility: hidden;
     &:checked {
-      & ~ .icon {
+      & ~ .cs--icon {
         opacity: 1;
       }
     }
@@ -53,7 +53,7 @@
   &__term {
     display: flex;
     font-size: 12px;
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--font-secondary);
     line-height: 1.4;
   }
   &__recaptcha {
