--- a/assets/scss/layout/page.scss
+++ b/assets/scss/layout/page.scss
@@ -1,4 +1,4 @@
-.page {
+.cs--page {
   position: relative;
   &__bg {
     position: absolute;
@@ -11,7 +11,7 @@
   &__container {
     position: relative;
     z-index: 1;
-    max-width: 1440px;
+    max-width: var(--container-width);
     padding: 0 var(--container-padding);
     margin: 0 auto;
   }
