--- a/assets/html/partials/components/landing/header.njk
+++ b/assets/html/partials/components/landing/header.njk
@@ -31,7 +31,7 @@
       </nav>
       <div class="cs--landing-login">
         <a href="javascript:void(0)">log in</a>
-        <a href="registration-create-account.html" class="">sing up</a>
+        <a href="registration-create-account.html" class="cs--btn cs--btn-transparent-grad-blue">sing up</a>
       </div>
     </div>
   </div>
