--- a/assets/scss/components/landing/header.scss
+++ b/assets/scss/components/landing/header.scss
@@ -6,3 +6,49 @@
     align-items: center;
   }
 }
+.cs--landing-nav {
+  margin: 0 auto;
+  &__list {
+    display: flex;
+    padding-left: 0;
+    margin: 0;
+    list-style: none;
+  }
+  &__item {
+    font-size: 14px;
+    font-family: var(--font-secondary);
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+}
+.cs--landing-login {
+  display: flex;
+  align-items: center;
+  a {
+    font-weight: 400;
+    text-transform: uppercase;
+    &:not(.cs--btn) {
+      text-decoration: underline;
+      @include media('hover') {
+        &:hover {
+          text-decoration: none;
+        }
+      }
+      &:focus {
+        text-decoration: none;
+      }
+    }
+    &.cs--btn {
+      margin-left: 20px;
+      @include media('hover') {
+        &:hover {
+          text-decoration: none;
+        }
+      }
+      &:focus {
+        text-decoration: none;
+      }
+    }
+  }
+}
