--- a/assets/html/partials/components/landing/header.njk
+++ b/assets/html/partials/components/landing/header.njk
@@ -15,7 +15,7 @@
 ] %}
 
 <header class="cs--landing-header">
-  <div class="cs--page__container">
+  <div class="cs--container">
     <div class="cs--landing-header__wrapper">
       <a href="javascript: void(0)" class="cs--logo cs--logo--lg">
         <img src="./img/logo.png" alt="logo">
