--- a/assets/html/registration-create-account.njk
+++ b/assets/html/registration-create-account.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="cs">
+<html lang="en" >
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -52,7 +52,7 @@
       <div class="cs--page__bg">
         <img src="./img/bg_registration.jpg" alt="">
       </div>
-      <div class="cs--page__container">
+      <div class="cs--container">
         <div class="cs--page__wrapper">
           <a href="javascript: void(0)" class="cs--logo cs--logo-lg">
             <img src="./img/logo.png" alt="logo">
