--- a/assets/scss/abstracts/helpers.scss
+++ b/assets/scss/abstracts/helpers.scss
@@ -3,7 +3,7 @@
 // You can remove or add your own helpers in this file.
 
 %listreset {
-  padding: 0;
+  padding-left: 0;
   margin: 0;
   list-style: none;
 }
