--- a/assets/scss/base/reset.scss
+++ b/assets/scss/base/reset.scss
@@ -8,14 +8,16 @@
   box-sizing: border-box;
 }
 
-html.cs {
+html {
   font-size: 62.5%;
+  font-family: var(--base-font-family);
+  line-height: var(--base-line-height);
   body {
     @include font-smoothing(on);
     min-width: var(--base-min-width);
     background: var(--base-background-color);
     color: var(--base-text-color);
-    font: var(--base-font-size) / var(--base-line-height) var(--base-font-family);
+    font-size: var(--base-font-size);
   }
 
   // adaptive images
