--- a/assets/scss/layout/section.scss
+++ b/assets/scss/layout/section.scss
@@ -1,4 +1,4 @@
-.cs--page {
+.cs--section {
   position: relative;
   &__bg {
     position: absolute;
@@ -7,5 +7,11 @@
     z-index: 0;
     overflow: hidden;
     width: 100%;
+    height: 100%;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 }
