--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -53,6 +53,9 @@ $media-expressions: (
   // container
   --container-width: var(--xlg);
   --container-padding: 80px;
+  // header size
+  --landing-header-width: 0;
+  --landing-header-height: 0;
 
   // Colors
   --color-white: hsl(0, 0%, 100%);
@@ -115,17 +118,17 @@ $media-expressions: (
   // icon
   --icon-color: var(--white);
 
-  @include media('<=xlg') {
+  @include media('<xlg') {
     --container-width: var(--lg);
     --container-padding: 30px;
   }
-  @include media('<=lg') {
+  @include media('<lg') {
     --container-width: var(--md);
   }
-  @include media('<=md') {
+  @include media('<md') {
     --container-width: var(--sm);
   }
-  @include media('<=xs') {
+  @include media('<xs') {
     --container-padding: 15px;
   }
 }
