--- a/assets/scss/base/reset.scss
+++ b/assets/scss/base/reset.scss
@@ -12,23 +12,27 @@ html {
   font-size: 62.5%;
   font-family: var(--base-font-family);
   line-height: var(--base-line-height);
-  body {
-    @include font-smoothing(on);
-    min-width: var(--base-min-width);
-    background: var(--base-background-color);
-    color: var(--base-text-color);
-    font-size: var(--base-font-size);
-  }
+}
 
-  // adaptive images
-  img {
-    max-width: 100%;
-    height: auto;
-    pointer-events: none;
+body {
+  @include font-smoothing(on);
+  min-width: var(--base-min-width);
+  background: var(--base-background-color);
+  color: var(--base-text-color);
+  font-size: var(--base-font-size);
+  &.fixed {
+    overflow: hidden;
   }
+}
 
-  // google map fix
-  .gm-style img {
-    max-width: none;
-  }
+// adaptive images
+img {
+  max-width: 100%;
+  height: auto;
+  pointer-events: none;
+}
+
+// google map fix
+.gm-style img {
+  max-width: none;
 }
