--- a/assets/scss/pages/registration.scss
+++ b/assets/scss/pages/registration.scss
@@ -21,7 +21,7 @@
       font-weight: 800;
       font-size: 30px;
       text-align: center;
-      @include media('<=xs') {
+      @include media('<xs') {
         margin: 30px 0 30px;
         font-size: 24px;
       }
