add section acquaintance. current update

--- a/assets/html/landing.njk
+++ b/assets/html/landing.njk
@@ -15,6 +15,7 @@
     {% include './partials/components/landing/header.njk' %}
     <main class="cs--page cs--page--landing">
       {% include './partials/sections/landing/hero.njk' %}
+      {% include './partials/sections/landing/acquaintance.njk' %}
     </main>
     {% include './partials/scripts/common.njk' %}
   </body>
