--- a/assets/html/partials/sections/landing/hero.njk
+++ b/assets/html/partials/sections/landing/hero.njk
@@ -18,11 +18,11 @@
 ] %}
 <section class="cs--section cs--landing-hero">
   <div class="cs--section__bg">
-    <img src="./img/bg_registration.jpg" alt="">
+    <img src="./img/registration-bg.jpg" alt="">
   </div>
   <div class="cs--container">
     <div class="cs--landing-hero__decor">
-      <img src="./img/hero-img-1.png" alt="">
+      <img src="./img/hero-img.png" alt="">
     </div>
     <div class="cs--landing-hero__content">
       <h1 class="cs--landing-hero__title">A smarter way to trade and manage <span class="cs--landing-hero__title--accent">your crypto</span></h1>
