--- a/assets/html/registration-create-account.njk
+++ b/assets/html/registration-create-account.njk
@@ -50,7 +50,7 @@
   <body>
     <main class="cs--page cs--page--registration">
       <div class="cs--page__bg">
-        <img src="./img/bg_registration.jpg" alt="">
+        <img src="./img/registration-bg.jpg" alt="">
       </div>
       <div class="cs--container">
         <div class="cs--page__wrapper">
