--- a/assets/scss/components/btn.scss
+++ b/assets/scss/components/btn.scss
@@ -71,3 +71,13 @@
     }
   }
 }
+a.cs--btn {
+  @include media('hover') {
+    &:hover {
+      text-decoration: none;
+    }
+  }
+  &:focus {
+    text-decoration: none;
+  }
+}
