--- a/assets/html/landing.njk
+++ b/assets/html/landing.njk
@@ -16,6 +16,7 @@
     <main class="cs--page cs--page--landing">
       {% include './partials/sections/landing/hero.njk' %}
       {% include './partials/sections/landing/acquaintance.njk' %}
+      {% include './partials/sections/landing/benefits.njk' %}
     </main>
     {% include './partials/scripts/common.njk' %}
   </body>
