--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -62,9 +62,12 @@ $media-expressions: (
   --color-black: hsl(0, 0%, 0%);
   --color-grey: hsl(0, 0%, 60%);
   --color-grey-10: hsl(0, 0%, 93%);
+  --color-grey-20: hsl(0, 0%, 84%);
+  --color-grey-30: hsl(0, 0%, 71%);
   --color-grey-80: hsl(0, 0%, 40%);
   --color-blue: hsl(210, 100%, 60%);
   --color-blue-10: hsl(195, 100%, 49%);
+  --color-blue-20: hsl(197, 100%, 48%);
   --color-blue-40: hsl(209, 100%, 47%);
   --color-blue-60: hsl(221, 83%, 18%);
   --color-blue-80: hsl(221, 93%, 12%);
@@ -72,7 +75,7 @@ $media-expressions: (
 
   --grad-blue: linear-gradient(86.88deg, #00c6fb 1.95%, #005bea 97.83%);
   --grad-orange: linear-gradient(271.95deg, #fb7e37 14.29%, #ff9a44 98.96%);
-  --grad-orange-10: linear-gradient(53.13deg, #C07945 3.66%, #FA7E37 92.94%);
+  --grad-orange-10: linear-gradient(53.13deg, #c07945 3.66%, #fa7e37 92.94%);
 
   // Fonts
   --font-sans-serif: 'Montserrat', Helvetica, sans-serif;
