add 2 section. current update

--- a/assets/html/landing.njk
+++ b/assets/html/landing.njk
@@ -17,7 +17,10 @@
       {% include './partials/sections/landing/hero.njk' %}
       {% include './partials/sections/landing/acquaintance.njk' %}
       {% include './partials/sections/landing/benefits.njk' %}
+      {% include './partials/sections/landing/showreal.njk' %}
+      {% include './partials/sections/landing/bring-trading.njk' %}
     </main>
+    {% include './partials/components/landing/footer.njk' %}
     {% include './partials/scripts/common.njk' %}
   </body>
 </html>
