--- a/assets/scss/pages/landing/index.scss
+++ b/assets/scss/pages/landing/index.scss
@@ -1,3 +1,5 @@
 @import 'section-hero';
 @import 'section-acquaintance';
 @import 'section-benefits';
+@import 'section-showreal';
+@import 'section-bring-trading';
