update bring trading

--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -61,6 +61,7 @@ $media-expressions: (
   --color-white: hsl(0, 0%, 100%);
   --color-black: hsl(0, 0%, 0%);
   --color-grey: hsl(0, 0%, 60%);
+  --color-grey-5: hsl(0, 0%, 96%);
   --color-grey-10: hsl(0, 0%, 93%);
   --color-grey-20: hsl(0, 0%, 84%);
   --color-grey-30: hsl(0, 0%, 71%);
