--- a/assets/scss/components/btn.scss
+++ b/assets/scss/components/btn.scss
@@ -1,7 +1,7 @@
 .cs--btn {
   --btn-border-radius: 50px;
   position: relative;
-  display: flex;
+  display: block;
   padding: 16px 32px;
   border: none;
   border-radius: var(--btn-border-radius);
