--- a/assets/html/partials/sections/landing/bring-trading.njk
+++ b/assets/html/partials/sections/landing/bring-trading.njk
@@ -1,14 +1,15 @@
+{% from "../../components/icon.njk" import icon %}
+
 {% set itemList = [
   {
-    'text': 'Est in purus eget in. Sollicitudin felis enim, nascetur non tempor nunc.'
+    'text': 'Get the edge you need to invest more profitably'
   }, {
-    'text': 'Est in purus eget in. Sollicitudin felis enim, nascetur non tempor nunc.'
+    'text': 'Join tens of thousands of traders using Quadency'
   }, {
-    'text': 'Est in purus eget in. Sollicitudin felis enim, nascetur non tempor nunc.'
+    'text': 'Receive updates on new features and announcements'
   }
 ] %}
 
-{% from "../../components/icon.njk" import icon %}
 <section class="cs--section cs--landing-bring-trading">
   <div class="cs--section__bg">
     <img src="./img/bring-trading-bg.png" alt="">
