--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -5,5 +5,6 @@
 @import 'btn';
 @import 'circle-block';
 @import 'benefits';
+@import 'grad-list';
 @import 'landing/header';
 @import 'landing/footer';
