--- a/assets/scss/pages/landing/section-hero.scss
+++ b/assets/scss/pages/landing/section-hero.scss
@@ -19,11 +19,10 @@
     &__decor {
       position: absolute;
       top: 0;
-      right: 150px;
+      right: 5%;
       z-index: 0;
       overflow: hidden;
       max-height: 100%;
-      transform: translateY(-25%);
       @include media('<xlg') {
         right: var(--container-padding);
       }
