add section news

--- a/assets/html/landing.njk
+++ b/assets/html/landing.njk
@@ -18,6 +18,7 @@
       {% include './partials/sections/landing/acquaintance.njk' %}
       {% include './partials/sections/landing/benefits.njk' %}
       {% include './partials/sections/landing/showreal.njk' %}
+      {% include './partials/sections/landing/news.njk' %}
       {% include './partials/sections/landing/bring-trading.njk' %}
     </main>
     {% include './partials/components/landing/footer.njk' %}
