--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -6,5 +6,6 @@
 @import 'circle-block';
 @import 'benefits';
 @import 'grad-list';
+@import 'card-list';
 @import 'landing/header';
 @import 'landing/footer';
