--- a/assets/html/landing.njk
+++ b/assets/html/landing.njk
@@ -12,6 +12,7 @@
     {% include './partials/head/common.njk' %}
   </head>
   <body>
+    <div class="cs--preloader" data-preloader></div>
     {% include './partials/components/landing/header.njk' %}
     <main class="cs--page cs--page--landing">
       {% include './partials/sections/landing/hero.njk' %}
