--- a/assets/html/registration-create-account.njk
+++ b/assets/html/registration-create-account.njk
@@ -50,6 +50,7 @@
   </head>
 
   <body>
+    <div class="cs--preloader" data-preloader></div>
     <main class="cs--page cs--page--registration">
       <div class="cs--page__bg">
         <img src="./img/registration-bg.jpg" alt="">
