--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -1,5 +1,6 @@
 // This is the main with imports from components folder.
 
+@import 'preloader';
 @import 'logo';
 @import 'reg-form';
 @import 'btn';
