add questions section

--- a/assets/html/landing.njk
+++ b/assets/html/landing.njk
@@ -19,6 +19,7 @@
       {% include './partials/sections/landing/acquaintance.njk' %}
       {% include './partials/sections/landing/benefits.njk' %}
       {% include './partials/sections/landing/showreal.njk' %}
+      {% include './partials/sections/landing/questions.njk' %}
       {% include './partials/sections/landing/news.njk' %}
       {% include './partials/sections/landing/bring-trading.njk' %}
     </main>
