--- a/assets/scss/abstracts/variables.scss
+++ b/assets/scss/abstracts/variables.scss
@@ -67,11 +67,13 @@ $media-expressions: (
   --color-grey-30: hsl(0, 0%, 71%);
   --color-grey-70: hsl(0, 0%, 45%);
   --color-grey-80: hsl(0, 0%, 40%);
+  --color-grey-100: hsl(0, 0%, 13%);
   --color-blue: hsl(210, 100%, 60%);
   --color-blue-10: hsl(195, 100%, 49%);
   --color-blue-20: hsl(197, 100%, 48%);
   --color-blue-40: hsl(209, 100%, 47%);
   --color-blue-60: hsl(221, 83%, 18%);
+  --color-blue-70: hsl(221, 90%, 15%);
   --color-blue-80: hsl(221, 93%, 12%);
   --color-blue-90: hsl(220, 92%, 10%);
   --color-blue-100: hsl(222, 89%, 7%);
