--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -8,5 +8,6 @@
 @import 'benefits';
 @import 'grad-list';
 @import 'card-list';
+@import 'detail';
 @import 'landing/header';
 @import 'landing/footer';
