--- a/assets/scss/components/main.scss
+++ b/assets/scss/components/main.scss
@@ -8,6 +8,6 @@
 @import 'benefits';
 @import 'grad-list';
 @import 'card-list';
-@import 'detail';
+@import 'details';
 @import 'landing/header';
 @import 'landing/footer';
