--- a/assets/scss/components/details.scss
+++ b/assets/scss/components/details.scss
@@ -1,4 +1,4 @@
-.cs--detail {
+.cs--details {
   &-list {
     --detail-padding: 30px;
     @extend %listreset;
@@ -13,13 +13,15 @@
     padding-right: calc(var(--detail-padding) * 2 + var(--detail-padding) / 2);
     padding-bottom: calc(var(--detail-padding) - var(--detail-padding) / 6);
     padding-left: var(--detail-padding);
+    outline: none;
     font-weight: 800;
     font-size: 18px;
     cursor: pointer;
     @include media('<xs') {
       font-size: 16px;
     }
-    &::-webkit-details-marker {
+    &::-webkit-details-marker,
+    &::marker {
       display: none;
     }
     &:before,
@@ -48,7 +50,7 @@
     }
     &[open] {
       background-color: var(--color-blue-70);
-      .cs--detail-summary {
+      .cs--details-summary {
         &:after {
           transform: rotateZ(0deg);
         }
@@ -57,7 +59,7 @@
   }
   &-wrapper {
     &:not(:last-child) {
-      .cs--detail-item {
+      .cs--details-item {
         border-bottom: 1px solid var(--color-grey-100);
       }
     }
